<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/complexHelloBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complex_hello" />

    <Button
        android:id="@+id/neatHelloBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/neat_hello" />

    <Button
        android:id="@+id/mapHelloBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_hello" />

    <Button
        android:id="@+id/calculateNeatHelloBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_neat_hello" />

    <Button
        android:id="@+id/calculateMapHelloBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_map_hello" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>